Implemented form group

--- a/src/app/sistema/vendas/clientes/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/sistema/vendas/clientes/cadastrar-cliente/cadastrar-cliente.component.html
@@ -1,4 +1,4 @@
-<form>
+<form [formGroup]="clienteForm">
   <!-- Pessoa Física, Jurídica -->
   <div class="row m-0 mt-4 justify-content-center">
 
@@ -41,56 +41,56 @@
 
       <!-- Nome -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="name" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Nome">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome</label>
       </div>
 
       <!-- Sobrenome -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="surname" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Sobrenome">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Sobrenome</label>
       </div>
 
       <!-- CPF -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="cpf" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="CPF">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">CPF</label>
       </div>
 
       <!-- RG -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="rg" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="RG">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">RG</label>
       </div>
 
       <!-- Celular -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="cellphone" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Celular">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Celular</label>
       </div>
 
       <!-- Telefone -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="telephone" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Telefone">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Telefone</label>
       </div>
 
       <!-- Data de nascimento -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
+        <input formControlName="birthDate" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
           placeholder="Data de nascimento" [max]="getDate()">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data de nascimento</label>
       </div>
 
       <!-- Email -->
       <div class="col-8 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="email"
+        <input formControlName="email" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="email"
           placeholder="Email">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email</label>
       </div>
@@ -105,62 +105,62 @@
 
       <!-- CNPJ -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CNPJ">
+        <input formControlName="cpf" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CNPJ">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNPJ</label>
       </div>
 
       <!-- Inscrição Estadual -->
       <div class="col-8 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="subcription" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Inscrição Estadual">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Inscrição Estadual</label>
       </div>
 
       <!-- Razão Social -->
       <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="socialReason" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Razão Social">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Razão Social</label>
       </div>
 
       <!-- Nome fantasia -->
       <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="fantasyName" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Nome fantasia">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome fantasia</label>
       </div>
 
       <!-- Data de nascimento -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="date"
+        <input formControlName="birthDate" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="date"
           placeholder="Data de nascimento" [max]="getDate()">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data de nascimento</label>
       </div>
 
       <!-- Email -->
       <div class="col-8 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="email"
+        <input formControlName="email" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="email"
           placeholder="Email">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email</label>
       </div>
 
       <!-- Celular -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="cellphone" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Celular">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Celular</label>
       </div>
 
       <!-- Telefone -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="telephone" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Telefone">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Telefone</label>
       </div>
 
       <!-- Ramal -->
       <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
+        <input formControlName="ramal" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
           placeholder="Ramal">
         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ramal</label>
       </div>
@@ -168,7 +168,6 @@
     </div>
 
   </div>
-
 
   <!-- Endereços -->
   <div class="row pb-4 m-0 border-bottom" *ngFor="let endereco of enderecos; let i = index">
