List all clients

--- a/src/app/sistema/vendas/clientes/listar-clientes/listar-clientes.component.html
+++ b/src/app/sistema/vendas/clientes/listar-clientes/listar-clientes.component.html
@@ -57,13 +57,13 @@
           <p>{{ cliente.id }}</p>
         </div>
         <div class="col-2">
-          <p>{{ cliente.nome }}</p>
+          <p>{{ cliente.name + ' ' + cliente.surname }} </p>
         </div>
         <div class="col-3">
-          <p>{{ cliente.email }}</p>
+          <p>{{ cliente.email  }}</p>
         </div>
         <div class="col-2">
-          <p>{{ cliente.telefone }}</p>
+          <p>{{ cliente.telephone }}</p>
         </div>
         <div class="col text-end">
           <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
