--- a/src/app/sistema/vendas/editar-clientes/listar-clientes/listar-clientes.component.html
+++ b/src/app/sistema/vendas/editar-clientes/listar-clientes/listar-clientes.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col text-end">
           <!-- <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i> -->
-          <i routerLink="../editar/{{cliente.id}}/cadastro" class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
+          <i routerLink="../editar/{{cliente.id}}" class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
           <!-- <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i> -->
         </div>
       </div>
