--- a/src/app/sistema/vendas/editar-clientes/listar-clientes/listar-clientes.component.html
+++ b/src/app/sistema/vendas/editar-clientes/listar-clientes/listar-clientes.component.html
@@ -46,7 +46,9 @@
         </div>
         <div class="col text-end">
           <h5 class="fw-bold text-truncate d-none">Ações</h5>
-          <i class="fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer"></i>
+          <a href="" class="px-2 py-2" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarCliente">
+            <i class="fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarCliente"></i>
+          </a>
           <i class="fs-5 bi-funnel icon-filter px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer"></i>
         </div>
       </div>
