--- a/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
@@ -4,7 +4,8 @@
 </button> -->
 
 <!-- Modal -->
-<div class="modal fade" id="adicionarFornecedor" tabindex="-1" aria-labelledby="adicionarFornecedorLabel" aria-hidden="true">
+<div class="modal fade" id="adicionarFornecedor" tabindex="-1" aria-labelledby="adicionarFornecedorLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-xl">
     <form>
       <!-- Modal content -->
@@ -23,7 +24,8 @@
             </div>
 
             <div class="col-12 d-grid px-2 pt-4 p-0 m-0 form-floating">
-              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark" type="text" placeholder="Categoria">
+              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark" type="text"
+                placeholder="Categoria">
                 <option value="" disabled selected>Selecione uma Categoria</option>
                 <option value="categoria1">Categoria 1</option>
                 <option value="categoria2">Categoria 2</option>
@@ -51,19 +53,22 @@
 
             <!-- Nome fantasia -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome fantasia">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Nome fantasia">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome fantasia</label>
             </div>
 
             <!-- Razão Social -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Razão Social">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Razão Social">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Razão Social</label>
             </div>
 
             <!-- Código do regime tributário -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark" placeholder="Código do regime tributário">
+              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark"
+                placeholder="Código do regime tributário">
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional ">Simples nacional | Regime normal</option>
@@ -73,7 +78,8 @@
 
             <!-- Contribuinte -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark" placeholder="Contribuinte">
+              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark"
+                placeholder="Contribuinte">
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional ">Simples nacional | Regime normal</option>
@@ -83,7 +89,8 @@
 
             <!-- Inscrição estadual -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Inscrição estadual">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Inscrição estadual">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Inscrição estadual</label>
             </div>
 
@@ -97,7 +104,8 @@
 
             <!-- Inscrição municipal -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Inscrição municipal">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Inscrição municipal">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Inscrição municipal</label>
             </div>
           </div>
@@ -164,7 +172,8 @@
 
             <!-- Logradouro -->
             <div class="col-7 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Logradouro">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Logradouro">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Logradouro</label>
             </div>
 
@@ -176,7 +185,8 @@
 
             <!-- Complemento -->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Complemento">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Complemento">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Complemento</label>
             </div>
 
@@ -198,55 +208,64 @@
 
                 <!-- Nome do contato -->
                 <div class="col-11 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome do contato">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                    placeholder="Nome do contato">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome do contato</label>
                 </div>
 
                 <!-- WhatsApp -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="WhatsApp">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                    placeholder="WhatsApp">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">WhatsApp</label>
                 </div>
 
                 <!-- Telefone 1 -->
                 <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Telefone 1">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                    placeholder="Telefone 1">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Telefone 1</label>
                 </div>
 
                 <!-- Ramal 1 -->
                 <div class="col-1 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Ramal 1">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                    placeholder="Ramal 1">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ramal 1</label>
                 </div>
 
                 <!-- Telefone 2 -->
                 <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Telefone 2">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                    placeholder="Telefone 2">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Telefone 2</label>
                 </div>
 
                 <!-- Ramal 2 -->
                 <div class="col-1 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Ramal 2">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                    placeholder="Ramal 2">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ramal 2</label>
                 </div>
 
                 <!-- Email do contato -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email" placeholder="Email do contato">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email"
+                    placeholder="Email do contato">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email do contato</label>
                 </div>
 
                 <!-- Email nota fiscal -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email" placeholder="Email nota fiscal">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email"
+                    placeholder="Email nota fiscal">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email nota fiscal</label>
                 </div>
 
                 <!-- Site -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Site">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                    placeholder="Site">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Site</label>
                 </div>
               </div>
@@ -285,19 +304,22 @@
 
             <!-- Data da primeira compra -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="date" placeholder="Data da primeira compra">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="date"
+                placeholder="Data da primeira compra">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da primeira compra</label>
             </div>
 
             <!-- Data da última compra -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="date" placeholder="Data da última compra">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="date"
+                placeholder="Data da última compra">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da última compra</label>
             </div>
 
             <!-- Observações -->
             <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
-              <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Observações" style="height: 150px"></textarea>
+              <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Observações"
+                style="height: 150px"></textarea>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Observações</label>
             </div>
 
@@ -310,7 +332,8 @@
 
           <!-- Cancelar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
-            <button data-bs-dismiss="modal" type="reset" class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start">
+            <button data-bs-dismiss="modal" type="reset"
+              class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start">
               <h5 class="fw-normal my-auto text-truncate text-custom-dark">Cancelar</h5>
             </button>
           </div>
